# LineageGA

./: README.md  environment.yml  pyproject.toml
.tmp/matplotlib/: fontlist-v3.11.0.json
.tmp/phase04_report/: phase04_statistics.txt  statistics_h2_anova.csv  statistics_h2_tukey.csv  statistics_h3_correlations.csv  statistics_h3_kruskal.csv  statistics_run_counts.csv
analysis/: __init__.py  report.py  statistics.py  visualize.py
bloodline_ga_tsp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dashboard/: __init__.py  app.py
docs/: phase01.md  phase02.md  phase03.md  phase04.md  phase05.md
experiments/: __init__.py  config.py  parallel.py  phase01_smoke.py  phase02_smoke.py  runner.py
plan/: implementation_plan.md  phase01_plan.md  phase02_plan.md  phase03_plan.md  phase04_plan.md  phase05_plan.md  血統濃度與GA子代品質_實驗設計書.md
scripts/: run_analysis.py
src/: __init__.py  crossover.py  fitness.py  ga_engine.py  individual.py  lineage.py  mutation.py  nk_landscape.py  population.py  selection.py  trap_function.py  tsplib_parser.py
tests/: test_crossover.py  test_fitness.py  test_ga_engine.py  test_lineage.py  test_phase03_pipeline.py  test_phase04_analysis.py  test_phase05_extended.py  test_population_selection_mutation.py  test_tsplib_parser.py
