[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bloodline-ga-tsp"
version = "0.1.0"
description = "Genetic algorithm components for TSP bloodline concentration experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "plotly",
    "pandas",
    "tqdm",
    "joblib",
    "dash",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["src", "experiments", "analysis", "dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
